--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
     "tailwindcss": "^4",
-    "typescript": "^5",
+    "typescript": "5.9.3",
+    "vitest": "^4.0.16",
     "wrangler": "^4.55.0"
   }
 }
