--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "build:data": "node scripts/build-hsk-cbor-zstd.mjs",
     "test": "playwright test",
     "test:ui": "playwright test --ui",
     "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
@@ -15,9 +16,12 @@
   },
   "dependencies": {
     "@opennextjs/cloudflare": "^1.14.6",
+    "cbor-x": "^1.6.0",
+    "fzstd": "^0.1.1",
     "next": "16.0.10",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "yaml": "^2.8.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
